<resources>
    <string name="app_name">Ours</string>

    <!-- Strings related to login -->
    <string name="server_client_id">67894896039-d3tn9m4hcbnscdb3gc3ftisbr921d56u.apps.googleusercontent.com</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="username">賴宏銘</string>
    <string name="user_email">hongminlai1203@gmail.com</string>

    <string name="nav_timeline">最新動態</string>
    <string name="nav_club">全部社團</string>
    <string name="nav_notification">通知</string>
    <string name="nav_history">瀏覽紀錄</string>
    <string name="nav_life_notebook">生涯記事本</string>
    <string name="nav_favorite">我的最愛</string>
    <string name="nav_manage_club">管理社團</string>
    <string name="nav_about">關於</string>
    <string name="nav_share">分享APP</string>
    <string name="nav_contact_us">聯絡我們</string>
    <string name="nav_setting">設定</string>

    <string-array name="TabNames">
        <item>最新活動</item>
        <item>行事曆</item>
        <item>我的收藏</item>
    </string-array>

    <integer-array name="TabIcons">
        <item>@drawable/ic_view_stream_white_24dp</item>
        <item>@drawable/ic_date_range_white_24dp</item>
        <item>@drawable/ic_favorite_white_24dp</item>
    </integer-array>

    <string name="club_name">社團名稱</string>
    <string name="club_intro">社團介紹</string>
    <string name="event_intro">活動介紹</string>
    <string name="content_more">更多</string>
    <string name="edit_club_page">編輯頁面</string>
    <string name="create_club_activity">建立活動</string>
    <string name="no_coming_event_available">無近期活動</string>
    <string name="no_past_event_available">無歷屆活動</string>
    <string name="no_event_available">無活動</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">提醒鈴聲</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">通知</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">關於</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">App版本</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">訊息提醒</string>
    <string name="title_vibrate">震動</string>
    <string name="summary_vibrate">新訊息時震動</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE CLUB</string>
    <string name="backdrop_slogan">Club Slogan</string>

    <string name="toolbar_title">Contacts</string>
    <string name="action_search">搜尋</string>
    <string name="action_create">Create</string>
    <string name="action_done">Done</string>
    <string name="search_hint">Type name…</string>
    <string name="action_collection">收藏</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">提醒</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
